[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/vehicles/fungibber.gd" type="Script" id=1]
[ext_resource path="res://resources/materials/vehicles/fu_wheel.material" type="Material" id=2]
[ext_resource path="res://resources/materials/vehicles/fungibber.material" type="Material" id=3]
[ext_resource path="res://resources/sounds/vehicles/engine_generator_loop_01.wav" type="AudioStream" id=4]
[ext_resource path="res://scripts/vehicles/wheel_mesh.gd" type="Script" id=5]
[ext_resource path="res://scripts/world/shadow_setter.gd" type="Script" id=6]
[ext_resource path="res://scenes/particles/drift_smoke_cpu.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/particles/muzzle_flash.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/particles/drift_smoke.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/cameras_&_ui/follow_camera.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/particles/muzzle_flash_cpu.tscn" type="PackedScene" id=12]
[ext_resource path="res://resources/meshes/vehicles/wheel_0.tres" type="ArrayMesh" id=15]
[ext_resource path="res://resources/meshes/vehicles/fungibber.tres" type="ArrayMesh" id=19]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.5

[sub_resource type="ConvexPolygonShape" id=6]
points = PoolVector3Array( 0.993, 1.149, 3.757, -0.993, 1.149, 3.757, 1.084, 2.921, 1.399, -1.084, 2.921, 1.399, 1.023, 2.921, -3.384, -1.023, 2.921, -3.384, 1.197, 0.081, 4.026, -1.197, 0.081, 4.026, 1.084, 0.083, -3.613, -1.084, 0.083, -3.613 )

[sub_resource type="Animation" id=7]
length = 0.001

[sub_resource type="Animation" id=16]
resource_name = "death"

[node name="RootSpatial" type="Spatial"]
_import_path = NodePath(".")
__meta__ = {
"__editor_plugin_screen__": "3D"
}

[node name="Body" type="VehicleBody" parent="." groups=["combat_vehicle", "heist_target"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0 )
collision_mask = 3
mass = 408.163
physics_material_override = SubResource( 1 )
script = ExtResource( 1 )
base_health = 0.0
base_engine_force = 384.0
nitro_force = 3200.0
rocket_force = 0.0
burst_force = 0.0
scene_resource = "res://scenes/vehicles/fungibber.tscn"

[node name="WheelFrontLeft" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.13288, 0.142987, 2.78646 )
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.4
wheel_radius = 0.36
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="Mesh" type="MeshInstance" parent="Body/WheelFrontLeft"]
pause_mode = 2
physics_interpolation_mode = 1
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
portal_mode = 3
mesh = ExtResource( 15 )
material/0 = ExtResource( 2 )
script = ExtResource( 5 )
required_setting = 4

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="Body/WheelFrontLeft/Mesh"]
aabb = AABB( -0.361, -0.126, -0.361, 0.722, 0.252, 0.722 )

[node name="WheelFrontRight" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.133, 0.142987, 2.78668 )
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.4
wheel_radius = 0.36
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="Mesh" type="MeshInstance" parent="Body/WheelFrontRight"]
pause_mode = 2
physics_interpolation_mode = 1
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
portal_mode = 3
mesh = ExtResource( 15 )
material/0 = ExtResource( 2 )
script = ExtResource( 5 )
required_setting = 4

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="Body/WheelFrontRight/Mesh"]
aabb = AABB( -0.361, -0.126, -0.361, 0.722, 0.252, 0.722 )

[node name="WheelBackLeft" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.13288, 0.142987, -1.82899 )
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 0.36
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="Mesh" type="MeshInstance" parent="Body/WheelBackLeft"]
pause_mode = 2
physics_interpolation_mode = 1
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
portal_mode = 3
mesh = ExtResource( 15 )
material/0 = ExtResource( 2 )
script = ExtResource( 5 )
required_setting = 4

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="Body/WheelBackLeft/Mesh"]
aabb = AABB( -0.361, -0.126, -0.361, 0.722, 0.252, 0.722 )

[node name="WheelBackRight" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.133, 0.142987, -1.82865 )
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 0.36
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="Mesh" type="MeshInstance" parent="Body/WheelBackRight"]
pause_mode = 2
physics_interpolation_mode = 1
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
portal_mode = 3
mesh = ExtResource( 15 )
material/0 = ExtResource( 2 )
script = ExtResource( 5 )
required_setting = 4

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="Body/WheelBackRight/Mesh"]
aabb = AABB( -0.361, -0.126, -0.361, 0.722, 0.252, 0.722 )

[node name="BodyMesh" type="MeshInstance" parent="Body"]
portal_mode = 3
mesh = ExtResource( 19 )
material/0 = ExtResource( 3 )
script = ExtResource( 6 )
required_setting = 2

[node name="CollisionShape" type="CollisionShape" parent="Body"]
shape = SubResource( 6 )

[node name="CameraBase" parent="Body" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.974, 0.9 )

[node name="ShotPosition" type="RayCast" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.718498, 1.04511, 2.32913 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="MuzzleFlash" parent="Body" instance=ExtResource( 9 )]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0.718, 1.045, 2.329 )

[node name="CPUMuzzleFlash" parent="Body" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.718, 1.045, 2.329 )

[node name="DriftParticles" type="Spatial" parent="Body"]

[node name="Left" parent="Body/DriftParticles" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.886, 0.16, -1.54 )

[node name="Right" parent="Body/DriftParticles" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.886, 0.16, -1.54 )

[node name="DriftCPUParticles" type="Spatial" parent="Body"]

[node name="Left" parent="Body/DriftCPUParticles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.886, 0.16, -1.54 )

[node name="Right" parent="Body/DriftCPUParticles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.886, 0.16, -1.54 )

[node name="NitroParticles" type="Spatial" parent="Body"]

[node name="NitroCPUParticles" type="Spatial" parent="Body"]

[node name="AcidParticles" type="Spatial" parent="Body"]

[node name="AcidCPUParticles" type="Spatial" parent="Body"]

[node name="LoopingAudio" type="Spatial" parent="Body"]

[node name="EngineAudio" type="AudioStreamPlayer3D" parent="Body/LoopingAudio"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.921751, 3.20609 )
stream = ExtResource( 4 )
unit_size = 0.4
autoplay = true
bus = "Effects"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
anims/RESET = SubResource( 7 )
anims/death = SubResource( 16 )

[node name="RespawnTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
one_shot = true

[node name="GunTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.08
one_shot = true

[node name="StuckTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 15.0

[connection signal="camera_entered" from="Body/WheelFrontLeft/Mesh/VisibilityNotifier" to="Body/WheelFrontLeft/Mesh" method="_on_VisibilityNotifier_camera_entered"]
[connection signal="camera_exited" from="Body/WheelFrontLeft/Mesh/VisibilityNotifier" to="Body/WheelFrontLeft/Mesh" method="_on_VisibilityNotifier_camera_exited"]
[connection signal="camera_entered" from="Body/WheelFrontRight/Mesh/VisibilityNotifier" to="Body/WheelFrontRight/Mesh" method="_on_VisibilityNotifier_camera_entered"]
[connection signal="camera_exited" from="Body/WheelFrontRight/Mesh/VisibilityNotifier" to="Body/WheelFrontRight/Mesh" method="_on_VisibilityNotifier_camera_exited"]
[connection signal="camera_entered" from="Body/WheelBackLeft/Mesh/VisibilityNotifier" to="Body/WheelBackLeft/Mesh" method="_on_VisibilityNotifier_camera_entered"]
[connection signal="camera_exited" from="Body/WheelBackLeft/Mesh/VisibilityNotifier" to="Body/WheelBackLeft/Mesh" method="_on_VisibilityNotifier_camera_exited"]
[connection signal="camera_entered" from="Body/WheelBackRight/Mesh/VisibilityNotifier" to="Body/WheelBackRight/Mesh" method="_on_VisibilityNotifier_camera_entered"]
[connection signal="camera_exited" from="Body/WheelBackRight/Mesh/VisibilityNotifier" to="Body/WheelBackRight/Mesh" method="_on_VisibilityNotifier_camera_exited"]
[connection signal="timeout" from="RespawnTimer" to="Body" method="_on_RespawnTimer_timeout"]
[connection signal="timeout" from="GunTimer" to="Body" method="_on_GunTimer_timeout"]
[connection signal="timeout" from="StuckTimer" to="Body" method="_on_StuckTimer_timeout"]
